[package]
name = "rdma"
version = "0.1.0"
authors = ["Qingming Qu <quqingming@gmail.com>"]
edition = "2021"

[[bin]]
name = "rqe"
path = "examples/rdma_quark_example.rs"

# [[bin]]
# name = "se"
# path = "examples/socketv2.rs"

[lib]
path = "src/rdma.rs"

[dependencies]
rdmaffi = { path = "../rdma-sys", package = "rdma-sys", version = "0.1.0" }
libc = "0.2.94"
errno = "0.2.8"
spin = "0.9.2"
